Additional checks to catch IMPALA-2168 earlier

IMPALA-2168 reports a seg fault when trying to call a function
(num_rows()) of what it seems to be a NULL PHJ::Partition probe_rows_
or build_rows_ object. This patch adds the necessary checks to
catch earlier cases where these objects are NULL.

Change-Id: I28e51f82c94ad0fd9577a83358d30873d38ecba2
Reviewed-on: http://gerrit.cloudera.org:8080/597
Reviewed-by: Ippokratis Pandis <ipandis@cloudera.com>
Tested-by: Internal Jenkins