be/src/common/object-pool.h
@@ -38,6 +38,7 @@ class ObjectPool {
     /// Create the object to be pushed to the shared vector outside the critical section.
     /// TODO: Consider using a lock-free structure.
     SpecificElement<T>* obj = new SpecificElement<T>(t);
+    DCHECK(obj != NULL);
     boost::lock_guard<SpinLock> l(lock_);
     objects_.push_back(obj);
     return t;
